...
        android:id="@+id/task_form_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_task_name_label"
        app:errorEnabled="true"
        app:errorTextAppearance="?textAppearanceLabelMedium"
        app:helperText="@string/new_task_name_description"
        app:helperTextTextAppearance="?textAppearanceLabelMedium"
        app:helperTextTextColor="?colorOutline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_form_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBodyMedium"
            tools:text="@tools:sample/full_names" />

    </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium"
            android:textColor="?colorOutline"
            tools:text="La tasca es fara cada 3 dies" />

        <RadioButton
            android:id="@+id/task_form_one_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/new_task_one_time"
            android:textAppearance="?textAppearanceBodyMedium" />
...
        android:hint="@string/new_task_next_date"
        app:helperText="@string/new_task_next_date_description"
        app:helperTextTextAppearance="?textAppearanceLabelMedium"
        app:helperTextTextColor="?colorOutline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_one_time_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
...
        android:hint="@string/new_task_periodicity"
        app:helperText="@string/new_task_periodicity_description"
        app:helperTextTextAppearance="?textAppearanceLabelMedium"
        app:helperTextTextColor="?colorOutline">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/task_form_periodicity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?textAppearanceBodyMedium"
            tools:ignore="LabelFor"
            tools:text="5" />
...
        android:hint="@string/new_task_last_date"
        app:helperText="@string/new_task_last_date_description"
        app:helperTextTextAppearance="?textAppearanceLabelMedium"
        app:helperTextTextColor="?colorOutline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_form_periodic_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
...
