...
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <include layout="@layout/view_task_form" />

            <Button
                android:id="@+id/new_task_save_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/new_task_save" />
...
