...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        android:paddingTop="8dp"
...
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/item_tasc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tasks_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/new_task_title"
        android:src="@drawable/baseline_add_24"
...
