...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/task_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
...
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            android:textAppearance="?textAppearanceBodyMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/task_edit_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="5" />

        <Button
            android:id="@+id/task_edit_button"
            style="?attr/materialIconButtonStyle"
...
